k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: slugapp
  namespace: slugapi-ns
  labels:
    app: slugapp
spec:
  type: ClusterIP
  selector:
    app: slugapp
  ports:
  - name: http
    port: 80
    targetPort: 8000
